--- a/_config.yml
+++ b/_config.yml
@@ -1,1 +1,3 @@
 theme: jekyll-theme-minimal
+title: Onelittlebecca's Site of Random Awesome-ness
+description: Cannot recommend bookmarking anything...
