--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,3 @@
-theme: jekyll-theme-minimal
+remote-theme: 18F/uswds-jekyll
 title: Onelittlebecca's Site of Random Awesome-ness
 description: Cannot recommend bookmarking anything...
